subtask: Make Subtak button & design

--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -434,6 +434,11 @@
             }
         }
     }
+
+    .subtask-message {
+        min-width: 50px;
+        margin-left: -40px;
+    }
 }
 
 @media all and (max-width:1199px){
@@ -536,7 +541,6 @@
     .project-header-outer {
         max-width: 1199px;
         min-width: 1000px;
-        padding:0 10px;
 
         .project-header-inner {
             .project-header-wrap {
