--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6687,6 +6687,25 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     color: #9e9e9e;
 }
 
+.subtask-message {
+    font-size: 12px;
+    color: #9E9E9E;
+    line-height: 15px;
+    padding: 7px 0 5px 0;
+    border: 1px solid #ddd;
+    text-align: center;
+    max-width: 80px;
+    &:hover {
+        color: @primary;
+        cursor:pointer;
+        border: 1px solid @primary;
+    }
+}
+
+.subtask-wrap {
+    display: none;
+}
+
 .infos, .parent-issue {
     .upload-progress {
         display: inline-block;
