--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6704,6 +6704,9 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 .subtask-wrap {
     display: none;
+  &.show {
+      display: block;
+  }
 }
 
 .infos, .parent-issue {
