--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -69,7 +69,7 @@
                     </div>
                 }
                 }
-                <hr style="margin: 0"/>
+                <hr class="parent-issue-delimeter"/>
                 @for(childIssue <- openChildIssues) {
                     <div class="issue-item @if(childIssue.id == issue.id){bold}">
                         <span class="state-label open"></span>
