subtask: Add i18n option button

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6703,6 +6703,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     border: 1px solid #ddd;
     text-align: center;
     max-width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     &:hover {
         color: @primary;
         cursor:pointer;
