--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -40,9 +40,9 @@
                     	@defining(issueForm.errors().get("title")) { errors =>
                             <div class="span12">
                                 <div class="span11">
-                                    <input type="text" id="title" name="title" value="" class="text title @if(errors != null) {error}" maxlength="250" tabindex="1" placeholder="@Messages("title")">
+                                    <input type="text" id="title" name="title" value="@issue.title" class="text title @if(errors != null) {error}" maxlength="250" tabindex="1" placeholder="@Messages("title")">
                                 </div>
-                                <div class="span1 subtask-message">Options</div>
+                                <div class="span1 subtask-message">@Messages("title.options")</div>
                             </div>
     	                    @if(errors != null) {
     							<div class="message">
