--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -51,7 +51,7 @@
     							}
     							</div>
     						}
-                          @partial_select_subtask(project, parentIssueId, parentIssueId != null)
+                          @partial_select_subtask(project, parentIssueId, issue.id)
     					}
                     </dd>
                 </dl>
