subtask: Fix designs, alignments and typos

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3412,6 +3412,7 @@ div.markdown-preview {
         resize:vertical;
     }
     .title {
+        margin-top: 15px;
         margin-bottom: 15px;
         font-size:18px;
         border: none;
@@ -6596,6 +6597,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 }
 
 .right-menu{
+    margin-top: 10px;
     margin-left: 10px;
     width: 400px;
 }
@@ -6705,6 +6707,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     max-width: 80px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-top: 14px;
     &:hover {
         color: @primary;
         cursor:pointer;
