--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -34,7 +34,7 @@
                                 <div class="span11">
                                     <input type="text" id="title" name="title" value="" class="text title @if(errors != null) {error}" maxlength="250" tabindex="1" placeholder="@Messages("title")">
                                 </div>
-                                <div class="span1"><div><div class="subtask-message">Options</div></div></div>
+                                <div class="span1 subtask-message">@Messages("issue.subtask")</div>
                             </div>
     	                    @if(errors != null) {
     							<div class="message">
