--- a/app/views/common/select2.scala.html
+++ b/app/views/common/select2.scala.html
@@ -46,7 +46,7 @@
 </div>
 </script>
 <script id="tplSelect2Projects" type="text/x-jquery-tmpl">
-<div class="usf-group" title="${name}>
+<div class="usf-group" title="${name}">
     <span class="avatar-wrap smaller"><img src="${avatarURL}" width="16" height="16"></span>
     <span class="name">${name}</span>
 </div>
