--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -42,7 +42,7 @@
                                 <div class="span11">
                                     <input type="text" id="title" name="title" value="@issue.title" class="text title @if(errors != null) {error}" maxlength="250" tabindex="1" placeholder="@Messages("title")">
                                 </div>
-                                <div class="span1 subtask-message">@Messages("title.options")</div>
+                                <div class="span1 subtask-message">@Messages("issue.subtask")</div>
                             </div>
     	                    @if(errors != null) {
     							<div class="message">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <div class="span3 span-hard-wrap">
+                <div class="span3 span-hard-wrap right-menu">
                     @if(isAllowed(UserApp.currentUser(), issue.stateAsResource(), Operation.UPDATE)){
                     <dl class="issue-option">
                         <dt>@Messages("issue.state")</dt>
