subtask: Show Sub-Task option on status

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6714,6 +6714,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         cursor:pointer;
         border: 1px solid @primary;
     }
+    &.option-on {
+        border: 1px solid @primary;
+        color: @primary;
+    }
 }
 
 .subtask-wrap {
