--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6762,3 +6762,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .txt-green {
     color: @light-green;
 }
+
+.reset-user-visited-list {
+    padding-top: 5px;
+    clear: both;
+}
