usermenu: Load usermenu asynchronously

--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -122,6 +122,6 @@
                 </form>
             </li>
         </ul>
-        @common.usermenu(null)
+        @common.usermenu()
     </div>
 </header>
