project-list: Fix wrong total page indicator
See: Yona Github issue #66

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1646,8 +1646,7 @@
     clear:both;
     // -- project list -- //
     .project {
-        margin: 5px 0px; /*5px 20px;*/
-        padding: 10px 0px;
+        padding: 15px 0 10px 0;
         overflow: hidden;
         border-bottom: 1px solid #DCDCDC;
         .info-wrap {
