code: Support simplified online commit

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6766,3 +6766,21 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     padding-top: 5px;
     clear: both;
 }
+
+.file-path-wrap {
+    font-size: 16px;
+    .new-file-name {
+        padding: 0 0;
+        margin-bottom: 0;
+        margin-left: 3px;
+        font-size: 16px;
+        border: none;
+        border-bottom: 1px solid #999;
+        border-radius: 0 !important;
+        height: 36px;
+    }
+}
+
+#new-file-link {
+    margin: 0 5px;
+}
